--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <hr>
 
-      <p>email <code>info@ptmeasurement.com</code> for consultancy services</p>
+      <p>Please email <code>info@ptmeasurement.com</code> for consultancy services</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://ptmeasurement.com">PT Measurement Limited</a> is a UK registered limited company with <a href="https://find-and-update.company-information.service.gov.uk/">UK Companies House</a>.</span>
