--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <p>Please email <code>info@ptmeasurement.com</code> for consultancy services</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://ptmeasurement.com">PT Measurement Limited</a> is a UK registered limited company with <a href="https://find-and-update.company-information.service.gov.uk/">UK Companies House</a>.</span>
-        <span class="site-footer-credits"> © 2022 <a href="https://ptmeasurement.com">PT Measurement Limited</a>.</span>
+        <span class="site-footer-owner"><a href="http://ptmeasurement.com">PT Measurement Limited</a> is a UK registered limited company with <a href="https://find-and-update.company-information.service.gov.uk/">UK Companies House</a>.</span>
+        <span class="site-footer-credits"> © 2022 <a href="http://ptmeasurement.com">PT Measurement Limited</a>.</span>
       </footer>
 
     </section>
