--- a/index.html
+++ b/index.html
@@ -1,36 +1,53 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
+<html lang="en-us"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <title>PT Measurement Limited</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/cayman.css">
+    <link rel="stylesheet" href="./PT Measurement Limited_files/normalize.css">
+    <link href="./PT Measurement Limited_files/css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./PT Measurement Limited_files/cayman.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
+    </style>
   </head>
   <body>
+<div class="imgbox">
+    <img class="center-fit" src='logo.png'>
+</div>
     <section class="page-header">
-      <h1 class="project-name">PT Measurement Limited</h1>
-      <h2 class="project-tagline">Providing flow measurement consultancy services to the Oil & Gas industry, world wide</h2>
+      <h1 class="project-tagline">Providing flow measurement consultancy services to the Oil &amp; Gas industry, world wide</h1>
     </section>
 
     <section class="main-content">
 
 
       <h1>
-      <a id="user-content-header-1" class="anchor" href="#header-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h1>
+      <a id="user-content-header-1" class="anchor" href="https://ptmeasurement.github.io/#header-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h1>
 
       <hr>
 
       <p>Please email <code>info@ptmeasurement.com</code> for consultancy services</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="http://ptmeasurement.com">PT Measurement Limited</a> is a UK registered limited company with <a href="https://find-and-update.company-information.service.gov.uk/">UK Companies House</a>.</span>
-        <span class="site-footer-credits"> © 2022 <a href="http://ptmeasurement.com">PT Measurement Limited</a>.</span>
+        <span class="site-footer-owner"><a href="http://ptmeasurement.com/">PT Measurement Limited</a> is a UK registered limited company with <a href="https://find-and-update.company-information.service.gov.uk/">UK Companies House</a>.</span>
+        <span class="site-footer-credits"> © 2022 <a href="http://ptmeasurement.com/">PT Measurement Limited</a>.</span>
       </footer>
 
     </section>
 
-  </body>
-</html>
+  
+
+</body></html>
