Fixed CSS directory

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>PT Measurement Limited</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <link rel="stylesheet" href="./PT Measurement Limited_files/normalize.css">
-    <link href="./PT Measurement Limited_files/css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="./PT Measurement Limited_files/cayman.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link href="./css/css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./css/cayman.css">
     <style>
         * {
             margin: 0;
